--- a/ReadME
+++ b/ReadME
@@ -1,1 +1,4 @@
-Starting_local.py is the code, all other files are dummy
+"AUTOMATION_TESTING" IS THE COMPLETE  AUTOMATED VERSION OF INDENT CREATION.
+"AUDIO_TESTING" IS WHERE I MEREGE AUTOMATION AND VOICE RECOGNIZATION
+ALL OTHER FILES ARE DUMMY
+
