--- a/ReadME
+++ b/ReadME
@@ -1,4 +1,5 @@
 "AUTOMATION_TESTING" IS THE COMPLETE  AUTOMATED VERSION OF INDENT CREATION.
-"AUDIO_TESTING" IS WHERE I MEREGE AUTOMATION AND VOICE RECOGNIZATION
-ALL OTHER FILES ARE DUMMY
-
+add the path of 
+vosk model 
+chromedriver
+yes_no.mp3 
